--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,9 @@
     overflow: hidden;
     text-align: center;
     white-space: nowrap;
-    font-size: 0;
+    font-size: 
+
+
   }
   
   .luminaire {
