--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@
     overflow: hidden;
     text-align: center;
     white-space: nowrap;
-    font-size:
+    font-size:12px;
   }
   
   .luminaire {
